--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "test": "echo \"No tests\""
   },
   "dependencies": {
+    "chalk": "^1.1.1",
     "gulp": "^3.6.2",
     "gulp-conflict": "^0.1.1",
     "gulp-install": "^0.1.4",
     "gulp-rename": "^1.2.0",
     "gulp-template": "^0.1.1",
+    "gulp-tsd": "0.0.4",
     "iniparser": "^1.0.5",
     "inquirer": "^0.8.0",
     "require-dir": "^0.3.0",
