--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   },
   "dependencies": {
     "chalk": "^1.1.1",
+    "fs": "0.0.2",
+    "glob": "^4.4.0",
     "gulp": "^3.6.2",
     "gulp-conflict": "^0.1.1",
     "gulp-install": "^0.1.4",
@@ -38,9 +40,12 @@
     "gulp-tsd": "0.0.4",
     "iniparser": "^1.0.5",
     "inquirer": "^0.8.0",
+    "lodash": "^3.9.3",
+    "path": "^0.11.14",
     "require-dir": "^0.3.0",
     "slush": ">=1.0.0",
-    "underscore.string": "^2.3.3"
+    "underscore.string": "^2.3.3",
+    "wiredep": "^2.2.2"
   },
   "keywords": [
     "slushgenerator"
